--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.jant.camera">
+    package="com.example.jant.canvas">
 
     <!-- 授予程序使用摄像头的权限 -->
     <uses-permission android:name="android.permission.CAMERA" />
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.jant.canvas.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
